--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Carousel - CSS Only</title>
+		<title></title>
 		<link rel="stylesheet" href="styles.css" />
-		<meta name="ad.size" content="width=950,height=300">
+		<meta name="ad.size" content="width=300,height=600">
 		<script type="text/javascript">
-			var clickTag = "https://flow.com.ar/";
+			var clickTag = "https://www.instagram.com/flowcontenidos/";
 		</script>
 
 
